# carousel

./: CONTRIBUTING.md  Cargo.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
assets/: crop.js  host.css  host.html  host.js  landing.css  landing.html  landing.js  morph.js  present.css  present.html  present.js  preset_css.js  snap.js  style_props.js
assets/export/: index.html  player.css  player.js
docs/: SEMVER.md
packaging/: README.md
packaging/linux/: carousel-deck.xml  carousel.desktop
packaging/linux/deb/: control  postinst  postrm
packaging/macos/: Info.plist
packaging/nsis/: carousel.nsi
packaging/windows/: carousel-deck.reg
scripts/: fetch-chromium.sh
src/: app.rs  config.rs  error.rs  fonts.rs  main.rs  recents.rs
src/agent/: acp.rs  mod.rs  vfs.rs  workspace.rs
src/bundle/: assets.rs  deck_io.rs  io_thread.rs  manifest.rs  mod.rs  reader.rs  theme_io.rs  writer.rs
src/commands/: animation.rs  composite.rs  group_commands.rs  group_relayout.rs  group_select.rs  guide_commands.rs  history.rs  insert_element.rs  layout_lifecycle.rs  mod.rs  move_element.rs  patch_buffer.rs  remove_element.rs  rename_element.rs  reparent_element.rs  replace_slide.rs  resize_element.rs  scale_elements.rs  set_element_id.rs  set_embed.rs  set_geometry.rs  set_inline_style.rs  set_morph_transition.rs  set_text.rs  slide_lifecycle.rs  slide_metadata.rs  slide_style.rs  swap_theme.rs  table_commands.rs  theme_globals.rs  transactions.rs
src/deck/: anim_catalog.rs  animation.rs  builders.rs  canvas.rs  element.rs  group_layout.rs  guide.rs  ids.rs  layout.rs  mod.rs  slide.rs  style.rs  templates.rs  theme.rs
src/export/: chromium.rs  fonts.rs  html.rs  mod.rs  pdf.rs
src/html/: mod.rs  parse.rs  serialize.rs  thumbnail.rs
src/ipc/: agent.rs  bridge.rs  landing.rs  mod.rs  present.rs
src/present/: mod.rs  reveal.rs  session.rs
