[package]
name = "Carousel"
version = "0.1.0"
edition = "2024"

[dependencies]
wry = "0.45"
tao = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
kuchikiki = "0.8"
regex = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
rfd = "0.15"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
