[package]
name = "Carousel"
version = "1.0.0"
edition = "2024"

[dependencies]
wry = "0.45"
tao = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
kuchikiki = "0.8"
regex = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
rfd = "0.15"
sha2 = "0.10"
base64 = "0.22"
font-kit = "0.14"
headless_chrome = "1.0.22"
ureq = "3"

# macOS only: used to install a minimal NSApp main menu so wry 0.45's
# keyDown handler has a valid (empty) performKeyEquivalent: target instead
# of dereferencing a null main menu. Already present transitively via
# tao/wry, so this adds no new crates to the build graph.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[lints.rust]
# objc 0.2's msg_send!/sel! macros expand to `#[cfg(feature = "cargo-clippy")]`
# in our crate. We define no such feature, so declare it expected to keep
# the build warning-free without blanket-allowing unexpected_cfgs.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
