[package]
name = "Carousel"
version = "1.0.0"
edition = "2024"

[dependencies]
wry = "0.45"
tao = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
kuchikiki = "0.8"
regex = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
rfd = "0.15"
sha2 = "0.10"
base64 = "0.22"
image = { version = "0.25" }
font-kit = "0.14"
headless_chrome = "1.0.22"
ureq = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
